[package]
name = "rust-yew-example"
version = "0.1.0"
authors = ["mhmmdd <mhmmd.dd@gmail.com>"]
edition = "2018"
categories = ["gui", "wasm", "web-programming"]
keywords = ["yew", "wasm", "wasm-bindgen", "web"]
readme = "README.md"
repository = "https://github.com/mhmmdd/rust-yew-example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.17.3"